--- a/resources/assets/sass/page.home.scss
+++ b/resources/assets/sass/page.home.scss
@@ -203,9 +203,9 @@
                 }
             }
         }
-        .background-area{
-            background: none;
-        }
+        //.background-area{
+        //    background: none;
+        //}
     }
 
 
@@ -261,7 +261,7 @@
     @media screen and (max-width: 600px) {
         #tile-lifestyle{
             padding-top: 37em;
-            padding-bottom: 1em;
+            padding-bottom: 2.2em;
         }
     }
     @media screen and (max-width: 500px) {
